	* deprecated setters for max connections, max half-open, upload and download
	  rates and unchoke slots. These are now set through session_settings
	* added functions to query an individual peer's upload and download limit
	* full support for BEP 21 (event=paused)
	* added share-mode feature for improving share ratios
	* merged all proxy settings into a single one
	* improved SOCKS5 support by proxying hostname lookups
	* improved support for multi-homed clients
	* added feature to not count downloaded bytes from web seeds in stats
	* added alert for incoming local service discovery messages
	* added option to set file priorities when adding torrents
	* removed the session mutex for improved performance
	* added upload and download activity timer stats for torrents
	* made the reuse-address flag configurable on the listen socket
	* moved UDP trackers over to use a single socket
	* added feature to make asserts log to a file instead of breaking the process
	  (production asserts)
	* optimized disk I/O cache clearing
	* added feature to ask a torrent if it needs to save its resume data or not
	* added setting to ignore file modification time when loading resume files
	* support more fine-grained torrent states between which peer sources it
	  announces to
	* supports calculating sha1 file-hashes when creating torrents
	* made the send_buffer_watermark performance warning more meaningful
	* supports complete_ago extension
	* dropped zlib as a dependency and builds using puff.c instead
	* made the default cache size depend on available physical RAM
	* added flags to torrent::status() that can filter which values are calculated
	* support 'explicit read cache' which keeps a specific set of pieces
	  in the read cache, without implicitly caching other pieces
	* support sending suggest messages based on what's in the read cache
	* clear sparse flag on files that complete on windows
	* support retry-after header for web seeds